--- a/特定情况下不使用&&.md
+++ b/特定情况下不使用&&.md
@@ -6,11 +6,13 @@
 
 ![Alt text](image.png)
 
-### 虽然&&运算符会保留所有非布尔值并原样返回
+### &&运算符会保留所有非布尔值并原样返回
 
 ```
   "" && 1 // ''
+
   0 && 1 // 0
+
   NaN && 1 // NaN
 
 ```
