--- a/react-native/初始化.md
+++ b/react-native/初始化.md
@@ -31,12 +31,19 @@ npx react-native init web
 #### 5、安装 xcode 作为 ios 模拟器，在 vscode 运行：
 
 ```
-cd ios
+cd web
 
-pod install
+cd ios
 
 npx react-native run-ios
 
 //执行以上命令会自动打开Xcode并加载项目
+```
 
+##### 如果最后一步 run-ios 报错了或者没有进入到项目可能需要查看一下是不是有安装到 cocoapods
+
+```
+pod --version // 查看是否安装
+
+pod install // 安装cocoapods
 ```
