--- a/react-native/初始化.md
+++ b/react-native/初始化.md
@@ -7,7 +7,25 @@ node -v
 npm -v
 ```
 
-#### 2、安装 react native cli，在终端中运行：(使用 yarn 代替 npm 来安装 react-native-cli)
+#### 2、安装 Homebrew
+
+```
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+```
+
+#### 3、安装 watchman
+
+```
+brew install watchman
+```
+
+#### 4、安装 cocapods
+
+```
+brew install cocapods
+```
+
+#### 5、安装 react native cli，在终端中运行：(使用 yarn 代替 npm 来安装 react-native-cli)
 
 ```
 yarn add react-native --exact
@@ -16,34 +34,26 @@ yarn add react-native --exact
 步骤：先改一下package.json中的react-native改为稳定版本（0.70.3），然后重新执行一下yarn install后再继续往下。
 ```
 
-#### 3、可以通过以下命令来检查是否已安装：
+#### 6、可以通过以下命令来检查是否已安装：
 
 ```
 react-native -v
 ```
 
-#### 4、创建新的 react native 项目
+#### 7、创建新的 react native 项目
 
 ```
 npx react-native init web
 ```
 
-#### 5、安装 xcode 作为 ios 模拟器，在 vscode 运行：
+#### 8、安装 xcode 作为 ios 模拟器，进入到 ios 文件中运行：
 
 ```
-cd web
-
 cd ios
+
+pod install
 
 npx react-native run-ios
 
 //执行以上命令会自动打开Xcode并加载项目
-```
-
-##### 如果最后一步 run-ios 报错了或者没有进入到项目可能需要查看一下是不是有安装到 cocoapods
-
-```
-pod --version // 查看是否安装
-
-pod install // 安装cocoapods
 ```
