--- a/react-native/列表侧滑.md
+++ b/react-native/列表侧滑.md
@@ -45,6 +45,8 @@ import {SwipeListView, SwipeRow} from 'react-native-swipe-list-view';
 - 使用<SwipeRow>时，必须给<SwipeRow>传递两个元素，一个为隐藏元素，一个是渲染元素
 - 想要实现侧滑效果，需要为第二个元素，也就是一开始渲染显示的元素增加 backgroundColor 属性
 
+### 这种滑动实际上是两个组件，一个组件放在下面固定，上面的组件滑动，把下面隐藏的内容露出来，这就是为什么上面滑动的组件需要设置背景色否则就实现不了效果的原因。并且它不能控制最大滑动的距离，只能禁用一侧的滑动，如果滑动超过了下面隐藏组件的范围就会露出空白，虽然手势释放会回到设置的 openValue，但是也不太美观。
+
 ## 学习网站
 
 ```
