--- a/electron/自动更新.md
+++ b/electron/自动更新.md
@@ -89,4 +89,55 @@
 
   ⚠️ 注意：执行一次自动更新不一定要调用这个方法，因为下载更新文件成功之后，下次应用启动的时候会强制更新
 
-### 自动更新一般流程：
+### 自动更新流程：
+
+1. 使用`autoUpdater.setFeedURL`配置更新源
+
+```ts
+import { autoUpdater } from "electron";
+```
+
+2. 启动应用程序时检查更新：
+
+```ts
+app.on("ready", () => {
+  autoUpdater.checkForUpdates();
+});
+```
+
+3. 设置更新源 URL：构建更新服务器的 URL 并通知 `autoUpdater`：
+
+```ts
+autoUpdater.setFeedURL({
+  url: "https://your-update-server.com/path/to/update/",
+  // 其他选项根据需要设置
+});
+```
+
+4. 通知用户更新应用
+
+```ts
+autoUpdater.on("update-downloaded", (event, releaseNotes, releaseName) => {
+  const dialogOpts = {
+    type: "info",
+    buttons: ["Restart", "Later"],
+    title: "Application Update",
+    message: process.platform === "win32" ? releaseNotes : releaseName,
+    detail:
+      "A new version has been downloaded. Restart the application to apply the updates.",
+  };
+
+  dialog.showMessageBox(dialogOpts).then((returnValue) => {
+    if (returnValue.response === 0) autoUpdater.quitAndInstall();
+  });
+});
+```
+
+5. 错误处理
+
+```ts
+autoUpdater.on("error", (message) => {
+  console.error("There was a problem updating the application");
+  console.error(message);
+});
+```
