--- a/react学习/接口配置.md
+++ b/react学习/接口配置.md
@@ -44,9 +44,9 @@ export default settings as AppSettings;
 
 4. **将 appsetting.ts 文件引入 AppHook.ts 和 App.tsx 中初始化 appsetting**
 
-   ![Alt text](../assets/image.png)
+   ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/8a2b5471-32b8-4164-80de-f97ea9610746)
 
-   ![Alt text](../assets/image-1.png)
+   ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/6b2a1d36-491c-4a2e-91f5-d345b310a0ee)
 
 5. **在 src 目录下添加 api 文件，文件中添加 http-client.tsx 文件，封装 get 和 post 请求**
 
@@ -90,7 +90,7 @@ export async function base<T>(
 
 6. **src 目录下新建文件夹统一管理接口地址，将封装好的 get 和 post 请求引入**
 
-   ![Alt text](../assets/image.png)
+   ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/748c0766-beca-4375-81e7-f10cf6cefb86)
 
 7. **具体组件调用接口示例**
 
