--- a/electron/代码签名.md
+++ b/electron/代码签名.md
@@ -2,7 +2,7 @@
 
 当使用 electron 开发完一个 mac 应用后打包后，在 mac 上运行软件会出现一个问题：
 
-![Alt text](../assets/signing-image.png)
+![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/02a5a1d8-ef8f-4cef-a7f2-5a1bae11502c)
 
 这是由于 mac 的安全系统会阻止应用的打开，有两种办法可以解决：
 
