sign and notarizate

--- a/electron/代码签名.md
+++ b/electron/代码签名.md
@@ -1,39 +1,23 @@
 ## Mac 应用包签名和公证
 
-当使用 electron 开发完一个 mac 应用后打包后，在 mac 上运行软件会出现一个问题：
+自 macOS 10.14.5 开始，应用程序必须要经过签名以及公证（notarize），否则默认情况下便无法直接运行，会弹出类似下面的警告：
 
 ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/02a5a1d8-ef8f-4cef-a7f2-5a1bae11502c)
 
-这是由于 mac 的安全系统会阻止应用的打开，有两种办法可以解决：
+这是由于 mac 的安全系统会阻止应用的打开，需要经过代码签名和公证的应用程序才可以在电脑上正常打开
 
-### 1.绕过安全系统（不推荐）
+### 为 Mac 应用包签名和公证步骤
 
-- 终端输入：
+<code>首先要有一个开发者账号（用来获取证书）</code>
 
-```
-sudo spctl –master-disable
-```
-
-- 继续执行指令（末端有一个空格，先不按回车）：
-
-```
-sudo xattr -r -d com.apple.quarantine
-```
-
-- 将解压后的应用程序拖动到终端窗口，得到如下组合，回车：
-
-```
-sudo xattr -r -d com.apple.quarantine /XXXXX/XXXX/XXX.app
-```
-
-- 再重新运行应用程序就可以了
-
-### 2.为 Mac 应用包签名和公证
-
-<code>首先必须要有一个开发者账号</code>
+1. **获取证书**
 
 - 确认要签名的平台是 mas 还是 darwin，两者使用的证书不相同
 
   - darwin 平台代表要将应用发布到 mac 端但不经过 app store，只需要可执行包（package 生成）
 
   - mas 平台代表将应用发布到 Mac App Store，需要应用程序审核等各类手续，需要时间准备
+
+2. **使用 osxSign 为 macOS 应用程序签名**
+
+- electron-forge 会使用@electron/osx-sign 来为应用程序签名
