sign and notarizate

--- a/electron/代码签名.md
+++ b/electron/代码签名.md
@@ -1,4 +1,4 @@
-## Mac 应用包签名和公证
+## Mac 应用包签名
 
 自 macOS 10.14.5 开始，应用程序必须要经过签名以及公证（notarize），否则默认情况下便无法直接运行，会弹出类似下面的警告：
 
@@ -6,18 +6,62 @@
 
 这是由于 mac 的安全系统会阻止应用的打开，需要经过代码签名和公证的应用程序才可以在电脑上正常打开
 
-### 为 Mac 应用包签名和公证步骤
+### 为 Mac 应用包签名步骤
 
-<code>首先要有一个开发者账号（用来获取证书）</code>
+`首先要有一个开发者账号（用来获取证书）`
 
-1. **获取证书**
+<span style="font-size:18px">1. 获取证书</span>
 
 - 确认要签名的平台是 mas 还是 darwin，两者使用的证书不相同
 
-  - darwin 平台代表要将应用发布到 mac 端但不经过 app store，只需要可执行包（package 生成）
+  - darwin 平台代表要将应用发布到 mac 端但不经过 app store（Developer ID Application）
 
-  - mas 平台代表将应用发布到 Mac App Store，需要应用程序审核等各类手续，需要时间准备
+  - mas 平台代表将应用发布到 Mac App Store (Apple Distribution)
 
-2. **使用 osxSign 为 macOS 应用程序签名**
+  - 本地测试开发（Apple Development）
+
+<span style="font-size:18px">2. 在本地 为 macOS 应用程序签名</span>
+
+- 将证书引入到本地`钥匙串访问`中
+
+  ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/f6f960a9-3c48-4caf-9e8f-a742addabc6d)
 
 - electron-forge 会使用@electron/osx-sign 来为应用程序签名
+
+```ts
+// forge.config.ts
+const config: ForgeConfig = {
+  packageConfig: {
+    osxSign: {
+      identity: "Apple Development:YOUR NAME(XXXXX)",
+    },
+  },
+  .......
+};
+```
+
+- 执行打包命令，测试应用是否已被签名：
+
+  - `npx electron-forge make` 打包过程会需要输入访问钥匙串的密码
+
+  - 验证是否签名：`codesign -dvvv /path/to/YourApp.app` 在本地终端执行命令，签名正确完成的应用程序会显示证书的信息
+
+### ⚠️ 签名过程遇到的问题：
+
+1、在将证书引入钥匙串的时候可能会出现“证书不受信任”的问题：
+
+![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/fc69921b-c92c-446a-ba41-f41b19667877)
+
+是由于钥匙串中一个叫 `Apple Worldwide Developer Relations Certification AuthorityA` 的证书过期了
+
+1、在钥匙串访问中删除已经安装的开发者证书
+
+2、下载安装证书 1：
+
+[https://developer.apple.com/certificationauthority/AppleWWDRCA.cer](https://developer.apple.com/certificationauthority/AppleWWDRCA.cer)
+
+3、下载安装证书 2：
+
+[https://www.apple.com/certificateauthority/AppleWWDRCAG3.cer](https://www.apple.com/certificateauthority/AppleWWDRCAG3.cer)
+
+4、重新安装开发者证书
