--- a/electron/代码签名.md
+++ b/electron/代码签名.md
@@ -22,29 +22,31 @@
 
 <span style="font-size:18px">2. 在本地 为 macOS 应用程序签名</span>
 
-- 将证书引入到本地`钥匙串访问`中
+- 将证书引入到本地`钥匙串访问`中，本地测试打包时会自动去钥匙串获取证书
 
   ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/f6f960a9-3c48-4caf-9e8f-a742addabc6d)
 
-- electron-forge 会使用@electron/osx-sign 来为应用程序签名
+- 将证书从`钥匙串`中导出（.p12 或 .pfx）并设置一个密码，将证书放入项目工程中
 
-```ts
-// forge.config.ts
-const config: ForgeConfig = {
-  packageConfig: {
-    osxSign: {
-      identity: "Apple Development:YOUR NAME(XXXXX)",
+  ![image](https://github.com/hotdongdong/StudyNotes/assets/88584214/f9860068-9df9-47f9-88f1-50d950883571)
+
+  在 electron-builder.json5 打包配置文件中，设置 cscLink 指向证书路径，添加环境变量 CSC_KEY_PASSWORD 为导出证书时设置的密码：`export CSC_KEY_PASSWORD=********`
+
+  ```
+    mac: {
+    target: {
+      target: "default",
+      arch: "universal",
     },
+    icon: "public/icons/logo.icns",
+    artifactName: "${productName}-mac.${ext}",
+    cscLink: "./EchoAvatar.p12",
   },
-  .......
-};
-```
+  ```
 
-- 执行打包命令，测试应用是否已被签名：
+  之后执行 yarn build 命令即可打包
 
-  - `npx electron-forge make` 打包过程会需要输入访问钥匙串的密码
-
-  - 验证是否签名：`codesign -dvvv /path/to/YourApp.app` 在本地终端执行命令，签名正确完成的应用程序会显示证书的信息
+  ![image](https://github.com/hotdongdong/StudyNotes/assets/88584214/2c048c32-e30f-4951-a04a-ad28385c0ebc)
 
 ### ⚠️ 签名过程遇到的问题：
 
