--- a/electron/初始化.md
+++ b/electron/初始化.md
@@ -1,14 +1,14 @@
 # Electron + React + TS + Vite 初始化
 
-- [Electron Forge](https://www.electronforge.io/config/hooks)
+- [Electron Builder](https://www.electron.build/index.html)
 - [Electron](https://www.electronjs.org/zh/)
 
 ## 初始化 React 项目
 
-1. **使用基于 `Electron Forge` 脚手架来搭建项目**：
+1. **使用基于 `vite 的 react+electron` 脚手架来搭建项目**：
 
 ```ts
-yarn create electron-app web --template=vite-typescript
+yarn create electron-vite
 ```
 
 2. **进入项目目录**：
@@ -26,23 +26,13 @@ npm install
 yarn
 ```
 
-4. **配置 react 模版**：
-
-- 因为用 electron forge，在一开始也是使用的 vite+TypeScript 初始化的项目，并没有 react 模板，所以可能需要自己再去对照 react 的项目和文档调整一下项目的目录
-
-electron 由主进程和渲染进程组成：
-
-- 根目录下新建 electron 文件夹来存放主进程入口文件（将 src 下的 main.ts、preload.ts、types.d.ts 放到 electron 中）
-- 原本 src 下的 renderer.ts 就是渲染进程，也就是 react 项目中的 main.tsx，可以根据自己的习惯命名为 main.tsx
-- 到 index.html 和 forge.config.ts 中更改正确的文件路径和名字
-
-5. **运行应用程序**：
+4. **运行应用程序**：
 
 ```ts
 // 使用npm或yarn来启动应用程序
-npm run start
+npm run dev
 或
-yarn start
+yarn dev
 ```
 
 ## 引入 tailwind css 框架
@@ -88,8 +78,6 @@ export const Account = () => {
 ```
 
 ## 配置@路径别名
-
-- 因为初始化后的 vite 配置文件被拆分了三个文件（渲染和打包时的），但是其中用处都是同一个，因此按照以前习惯改为 vite.config.ts 即可
 
 - 在 `vite.config.ts` 中添加一个`alias`配置项
 
