--- a/electron/打包.md
+++ b/electron/打包.md
@@ -1,78 +1,99 @@
-### 安装 electron-forge 打包工具
-
-将@electron-forge/cli 模板作为 devDependency 安装到项目中
+### 安装 electron-builder 打包工具
 
 ```
-yarn add --dev @electron-forge/cli
-```
-
-### 在现有的 electron 项目中引入 electron-forge
-
-```
-yarn electron-forge import
+yarn add --dev @electron-builder
 ```
 
 ### 构建命令
 
-package、make 和 publish 是 electron 构建的三个主要步骤，每个步骤都依赖前一个步骤都输出（运行 publish 将首先运行 package，然后 make）
+**Build**：
 
-1. **Package 命令参数**：
+根据 electron-builder.json5 配置文件打包
 
-| Flag       | Value             | Description                      |
-| ---------- | ----------------- | -------------------------------- |
-| --arch     | 架构，X64         | 要打包的目标架构，默认为主机架构 |
-| --platform | 平台，例如 darwin | 要打包的目标平台，默认为主机平台 |
+执行 yarn build 生成的安装包与操作系统（Mac、Windows）有关（以下命令都只针对在 mac 上进行打包）
 
-2. **Package**：
+```
+/**
+ * @see https://www.electron.build/configuration/configuration
+ */
+{
+  "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
+  "appId": "YourAppID",
+  "asar": true,
+  "productName": "YourAppName",
 
-   - package 是将应用程序打包到特定平台的可执行软件包，不生成可分发的格式
+  // 打包生成文件路径
+  "directories": {
+    "output": "release/${version}"
+  },
 
-   - 打包 MAC 应用
+  "files": [
+    "dist",
+    "dist-electron"
+  ],
 
-   ```ts
-   // M -arm64
-   npx electron-forge package --arch arm64 platform darwin
+  // 打包mac文件格式
+  // 设置为default代表会打包出zip、dmg格式的文件
+  // 设置为universal代表打出来的安装包对于M和intel芯片是通用的
+  "mac": {
+    target: {
+      target: "default",
+      arch: "universal",
+    },
 
-   // intel -x64
-   npx electron-forge package --arch x64 platform darwin
-   ```
+    // 打包生成安装包的名字
+    "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
+  },
 
-   - 打包 Windows 应用
+  "win": {
+    "target": [
+      {
+        "target": "nsis",
+        "arch": [
+          "x64"
+        ]
+      }
+    ],
+    "artifactName": "${productName}-Windows-${version}-Setup.${ext}"
+  },
+  "nsis": {
+    "oneClick": false,
+    "perMachine": false,
+    "allowToChangeInstallationDirectory": true,
+    "deleteAppDataOnUninstall": false
+  },
 
-     - 安装 wine：允许在 Linux 或其他操作系统上运行 Windows 应用程序的工具
+  "linux": {
+    "target": [
+      "AppImage"
+    ],
+    "artifactName": "${productName}-Linux-${version}.${ext}"
+  }
+}
 
-     ```
-     // 通过homebrew来安装，要提前安装好homebrew
-     brew install --cask --no-quarantine wine-stable
-     ```
+```
 
-     - 安装 mono：[Mono](https://www.mono-project.com/download/stable/)
+- 打包 MAC 应用
 
-     - 执行打包命令
+```ts
+yarn build
+```
 
-     ```
-     npx electron-forge package --arch x64 --platform win32
-     ```
+- 打包 Windows 应用 (在本地无法打包出 windows 安装包，可能跟一些堆栈溢出有关系，在 ci 上可正常实现)
+
+  - 安装 wine：允许在 Linux 或其他操作系统上运行 Windows 应用程序的工具
+
+  ```
+  // 通过homebrew来安装，要提前安装好homebrew
+  brew install --cask --no-quarantine wine-stable
+  ```
+
+  - 安装 mono：[Mono](https://www.mono-project.com/download/stable/)
+
+  - 执行打包命令
+
+  ```
+  yarn build --w
+  ```
 
 - 打包后的包都会输出在根目录下的 out 文件夹中
-
-3. **make**：
-
-   - 生成可分发格式的应用
-
-   - 生成 MAC 的应用程序包
-
-   ```ts
-   // M -arm64
-   npx electron-forge make --arch arm64 platform darwin
-
-   // intel -x64
-   npx electron-forge make --arch x64 platform darwin
-   ```
-
-   - 生成 Windows 的应用程序包
-
-   ```ts
-     // 需要安装wine和mono
-     npx electron-forge make --arch x64 --platform win32
-   ```
