--- a/electron/自动更新.md
+++ b/electron/自动更新.md
@@ -91,53 +91,149 @@
 
 ### 自动更新流程：
 
-1. 使用`autoUpdater.setFeedURL`配置更新源
+#### 一、在`electron-builder.json5`中添加 publish 字段
+
+目的是为了让打包的时候同时生成一个更新源文件（Mac：latest-mac.yml；Windows：latest.yml）
+
+```
+publish: [
+  {
+    provider: "generic",
+    url: "https://XXXX",  // 更新服务器地址
+  },
+],
+```
+
+![image](https://github.com/hotdongdong/StudyNotes/assets/88584214/36bc2a04-1e77-4522-8c31-1f5aaa7acaa6)
+
+- 其中 version 代表新安装包版本号，自动更新主要就是去对比更新源文件的 version 以及当前客户端版本号
+
+- 配置了自动更新后，构建后会有几个关键文件（缺一不可）：
+
+  - EchoAvatar-mac.zip (mac 自动更新时下载的更新包)
+
+  - EchoAvatar-mac.dmg （供用户分发）
+
+  - EchoAvatar-win.exe (供用户分发、下载时的更新包)
+
+  - latest-mac.yml (mac 更新源文件)
+
+  - latest.yml （windows 更新源文件）
+
+- 当运行 EchoAvatar 时，应用程序会尝试访问更新文件，从更新文件中获取最新的版本号和一个相对路径，路径指向 zip 压缩包
+
+  - 如果更新文件 latest-mac.yml 的 version 与当前运行的应用程序 version 一致则不会再去访问压缩包
+
+  - 如果不一致，则去访问压缩包并将压缩包下载到本地
+
+- 要打包出 EchoAvatar-mac.dmg 的原因：dmg 格式的安装包在安装时只能将应用程序安装在 Application 中，这样客户端具有可读可写的操作；如果分发 zip 包的话，用户安装的位置是不可控的，会导致应用程序只有可读操作。自动更新原理是检查更新后将远程的新安装包下载至缓存位置，之后再替换旧版本的安装包，如果没有可写的操作会导致能够下载新版本却会因为权限的问题无法正确安装。
+
+![image](https://github.com/hotdongdong/StudyNotes/assets/88584214/f60f5462-9111-4f56-9f9a-cb41f910a32d)
+
+#### 二、封装 autoupdater 模块
+
+- 使用`autoUpdater.setFeedURL`配置更新源
 
 ```ts
 import { autoUpdater } from "electron";
+
+// 只指向服务器地址即可
+const updateUrl = https:/XXX/downloads:
+autoUpdater.setFeedURL(updateUrl);
 ```
 
-2. 启动应用程序时检查更新：
+- 检查更新：
 
 ```ts
-app.on("ready", () => {
-  autoUpdater.checkForUpdates();
+autoUpdater.checkForUpdates();
+
+// 关闭自动更新
+autoUpdater.autoDownload = false;
+```
+
+- 若无可用更新：
+
+```ts
+autoUpdater.on("update-not-available", () => {
+  // 向渲染进程发起信息：UpdateMessageEnum.NoUpdate（无可用更新）
+  win?.webContents.send("updateMessage", UpdateMessageEnum.NoUpdate);
 });
 ```
 
-3. 设置更新源 URL：构建更新服务器的 URL 并通知 `autoUpdater`：
+- 若有可用更新：
 
 ```ts
-autoUpdater.setFeedURL({
-  url: "https://your-update-server.com/path/to/update/",
-  // 其他选项根据需要设置
+autoUpdater.on("update-available", (info) => {
+  // 向渲染进程发起信息：UpdateMessageEnum.UpdateAva（有可用更新）
+  win?.webContents.send("updateMessage", UpdateMessageEnum.UpdateAva);
 });
 ```
 
-4. 通知用户更新应用
+- 渲染进程接收到 UpdateMessageEnum.UpdateAva 后，则再从渲染进程发起信息通知主进程进行更新
 
 ```ts
-autoUpdater.on("update-downloaded", (event, releaseNotes, releaseName) => {
-  const dialogOpts = {
-    type: "info",
-    buttons: ["Restart", "Later"],
-    title: "Application Update",
-    message: process.platform === "win32" ? releaseNotes : releaseName,
-    detail:
-      "A new version has been downloaded. Restart the application to apply the updates.",
-  };
-
-  dialog.showMessageBox(dialogOpts).then((returnValue) => {
-    if (returnValue.response === 0) autoUpdater.quitAndInstall();
-  });
+ipcMain.on("download", () => {
+  // 下载安装包
+  autoUpdater.downloadUpdate();
 });
 ```
 
-5. 错误处理
+- 在下载过程中，主进程可用监听`download-progress`事件来获取到下载进度 progress
+
+```ts
+autoUpdater.on("download-progress", (progressObj) => {
+  try {
+    log.info(progressObj);
+
+    // 将获取到的进度发送给渲染进程实现下载进度条UI
+    win?.webContents.send("downloadProgress", progressObj);
+  } catch (err) {
+    console.log((err as Error).message);
+  }
+});
+```
+
+- 下载完成后，会触发到事件`update-downloaded`
+
+```ts
+autoUpdater.on("update-downloaded", () => {
+  try {
+    // 发送信息给渲染进程告知已下载完成，等待渲染进程触发相关按钮
+    win?.webContents.send("updateMessage", UpdateMessageEnum.Updated);
+  } catch (err) {
+    log.error((err as Error).message);
+  }
+});
+```
+
+- 渲染进程触发`退出安装并重启`按钮
+
+```ts
+ipcMain.on("quitAndInstall", () => {
+  // 应用程序退出、安装新版本并重启
+  autoUpdater.quitAndInstall();
+});
+```
+
+- 错误处理
 
 ```ts
 autoUpdater.on("error", (message) => {
   console.error("There was a problem updating the application");
   console.error(message);
 });
+```
+
+- 若要定时去检测是否有更新，则在以上流程中加入一个定时器即可
+
+```ts
+let updateInterval: NodeJS.Timeout;
+
+const startUpdateInterval = () => {
+  updateInterval && clearInterval(updateInterval);
+
+  updateInterval = setInterval(() => {
+    autoUpdater.checkForUpdates();
+  }, updateTime);
+};
 ```
