--- a/react学习/接口配置.md
+++ b/react学习/接口配置.md
@@ -1,4 +1,4 @@
-1. **在 public 中配置 appsetting.json**
+1. **在 public 中配置 appsetting.json 配置文件**
 
 ```json
 {
@@ -48,7 +48,7 @@ export default settings as AppSettings;
 
    ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/6b2a1d36-491c-4a2e-91f5-d345b310a0ee)
 
-5. **在 src 目录下添加 api 文件，文件中添加 http-client.tsx 文件，封装 get 和 post 请求**
+5. **在 src 目录下添加 services 文件夹，里面新增 api 文件夹和 dtos 文件夹，api 文件中添加 http-client.tsx 文件，封装 get 和 post 请求（dtos 文件夹中存放接口请求和响应数据的类型）**
 
 ```tsx
 import { AppSettings } from "../appsettings";
@@ -88,9 +88,17 @@ export async function base<T>(
 }
 ```
 
-6. **src 目录下新建文件夹统一管理接口地址，将封装好的 get 和 post 请求引入**
+6. **api 文件夹目录下新建文件夹统一管理接口地址，将封装好的 get 和 post 请求引入**
 
-   ![Alt text](https://github.com/hotdongdong/StudyNotes/assets/88584214/748c0766-beca-4375-81e7-f10cf6cefb86)
+```tsx
+import { Get, Post } from "../http-client";
+
+export const PostSwiperList = async (
+  data: SwiperApiData
+): Promise<SwiperList[]> => {
+  return await Post("/api/Advertisement/advertisements", data);
+};
+```
 
 7. **具体组件调用接口示例**
 
